// Database schema for YallaDiscover

Table users {
  id int [pk, increment]
  name varchar
  email varchar [unique]
  email_verified_at timestamp [null]
  password varchar
  created_at timestamp
  updated_at timestamp
}

Table cities {
  id int [pk, increment]
  name varchar
  description text [null]
  image varchar [null]
  latitude decimal [null]
  longitude decimal [null]
  created_at timestamp
  updated_at timestamp
}

Table stadiums {
  id int [pk, increment]
  name varchar
  city_id int
  address varchar
  image varchar [null]
  description text [null]
  created_at timestamp
  updated_at timestamp
}

Table teams {
  id int [pk, increment]
  name varchar
  group varchar [null]
  flag varchar [null]
  created_at timestamp
  updated_at timestamp
}

Table matches {
  id int [pk, increment]
  stadium_id int
  team1_id int
  team2_id int
  score_team1 int [null]
  score_team2 int [null]
  match_date timestamp
  status enum
  created_at timestamp
  updated_at timestamp
}

Table articles {
  id int [pk, increment]
  title varchar
  content text
  author_id int
  publication_date date [null]
  image varchar [null]
  slug varchar [unique]
  published boolean
  created_at timestamp
  updated_at timestamp
}

Table categories {
  id int [pk, increment]
  name varchar
  slug varchar [unique]
  description text [null]
  created_at timestamp
  updated_at timestamp
}

Table comments {
  id int [pk, increment]
  content text
  user_id int
  article_id int
  created_at timestamp
  updated_at timestamp
}

Table favorite_cities {
  id int [pk, increment]
  user_id int
  city_id int
  created_at timestamp
  updated_at timestamp

  indexes {
    (user_id, city_id) [unique]
  }
}

Table favorite_stadiums {
  id int [pk, increment]
  user_id int
  stadium_id int
  created_at timestamp
  updated_at timestamp

  indexes {
    (user_id, stadium_id) [unique]
  }
}

Table favorite_matches {
  id int [pk, increment]
  user_id int
  match_id int
  created_at timestamp
  updated_at timestamp

  indexes {
    (user_id, match_id) [unique]
  }
}

Table favorite_teams {
  id int [pk, increment]
  user_id int
  team_id int
  created_at timestamp
  updated_at timestamp

  indexes {
    (user_id, team_id) [unique]
  }
}

Table accommodations {
  id int [pk, increment]
  name varchar
  city_id int
  address varchar
  price_min decimal
  description text [null]
  image varchar [null]
  created_at timestamp
  updated_at timestamp
}

Table news {
  id int [pk, increment]
  title varchar
  content text
  image varchar [null]
  created_at timestamp
  updated_at timestamp
}

// Relationships
Ref: stadiums.city_id > cities.id
Ref: matches.stadium_id > stadiums.id
Ref: matches.team1_id > teams.id
Ref: matches.team2_id > teams.id
Ref: articles.author_id > users.id
Ref: comments.user_id > users.id
Ref: comments.article_id > articles.id
Ref: favorite_cities.user_id > users.id
Ref: favorite_cities.city_id > cities.id
Ref: favorite_stadiums.user_id > users.id
Ref: favorite_stadiums.stadium_id > stadiums.id
Ref: favorite_matches.user_id > users.id
Ref: favorite_matches.match_id > matches.id
Ref: favorite_teams.user_id > users.id
Ref: favorite_teams.team_id > teams.id
Ref: accommodations.city_id > cities.id
